--- a/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.org
+++ b/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.org
@@ -487,7 +487,7 @@ sentido.\\
 En cualquier caso, con la idea de demarcación se eleva una determinada
 concepción del método de la ciencia natural a método del conocimiento
 científico y racional. Se produce una cierta confusión entre
-epistemología y metodología coo consecuencia previa de la
+epistemología y metodología como consecuencia previa de la
 desvalorización de un tipo de racionalidad, e.g. ciencias humanas,
 frente a otro, ciencias naturales.\\
 Más que la reducción de la racionalidad a la racionalidad científica,
@@ -549,7 +549,7 @@ propiamente empírico y su carácter evolutivo.\\
 El *carácter empírico* dela ciencia implica que los enunciados
 científicos nos proporcionan información sobre la experiencia y que
 son capaces de explicar la experiencia.\\
-El *carácter evolutivo* de la ciencia implica también deos notas de los
+El *carácter evolutivo* de la ciencia implica también dos notas de los
 enunciados científicos: Que tienen un carácter hipotético, i.e., no
 tienen una validez definitiva, y que tienen un carácter progresivo,
 i.e., que suponen un aumento real de nuestro conocimiento.\\
@@ -646,18 +646,18 @@ Los enunciados básicos cumplen dos funciones en el sistema científico:
      básicos lógimanete posibles.
   2. Los enunciados básicos aceptados constituyen la base para la
      corroboración de la hipótesis. Si contradicen la teoría,
-     admintimos que nos proporcionan motivo suficiente para la
+     admitimos que nos proporcionan motivo suficiente para la
      falsación de ésta. únicamente en el caso de que corroboren una
      hipótesis falsadora.
 
-La fórma de como deben aceptarse los enunciados básicos para que
+La forma de como deben aceptarse los enunciados básicos para que
 cumplan su función de contrastación empírica, Popper señala dos reglas:
-  1. No aceptar enunciados básicos esporádicos, que no esten en
+  1. No aceptar enunciados básicos esporádicos, que no estén en
      conexión lógica con otros enunciados.
   2. Se aceptan enunciados básicos como constatación de teorías cuando
      se suscitan cuestiones esclarecedoras de ésta.
 
-Estas dos reglas són circulares en el sentido de que la aceptación de
+Estas dos reglas son circulares en el sentido de que la aceptación de
 enunciados básicos se lleva a cabo con vistas a la contrastación de
 teorías, y por esto, precisamente, no se aceptan enunciados básicos
 aislados.\\
@@ -670,7 +670,7 @@ descansa en el hecho de que pueden contrastarse intersubjetivamente
 —que sucede en la comunicación intelectual entre dos sujetos.\\
 
 A partir de un enunciado básico aislado lo único que podemos inferir
-son enunciados estrictamente existenciales, que no són contrastables
+son enunciados estrictamente existenciales, que no son contrastables
 ni falsables. Sólo con los enunciados básicos que están en relación
 con otros de carácter más teórico a partir de los cuales se puedan
 deducirse, se puede garantizar que sean objetivos, *contrastables
@@ -678,7 +678,7 @@ intersubjetivamente*, indispensable para que puedan servir como
 enunciados de contraste empírico de las teorías.
 
 *** Ciencia y experiencia
-La ciencia, según Popper, es un conunto de enunciados lógicamente
+La ciencia, según Popper, es un conjunto de enunciados lógicamente
 estructurados y de cuyas relaciones se ocupa la epistemología. Es como
 un sistema de disposiciones y que puede ser materia de estudio de la
 psicología, puede estar unido a sentimientos de creencia o de
@@ -690,7 +690,7 @@ intensidad y adoptar el único camino que existe para asegurar la
 validez de los razonamientos lógicos, i.e., prepararlos mediante el
 análisis —en el caso de las ciencias analíticas— o la presentación de
 hechos —en el caso de las ciencias empíricas— para su contrastación.\\
-Las relaciones lógicas sólo se dan entre enuinciados, es imposible
+Las relaciones lógicas sólo se dan entre enunciados, es imposible
 pretender la fundamentación lógica de enunciados por algo que no son
 enunciados, i.e. por experiencias.\\
 
@@ -706,7 +706,7 @@ imposibles.\\
 
 #+begin_quote
 La decisión de aceptar un enunciado básico y darse por satisfecho con
-él tiene una conexión causal con nusetras experiencias, especialemente
+él tiene una conexión causal con nuestras experiencias, especialmente
 con las perceptivas. Pero no se justifican los enunciados básicos por
 medio de ellas. Las experiencias pueden motivar una decisión la
 adopción o rechazo de un enunciado, pero ningún enunciado básico puede
@@ -726,12 +726,12 @@ Si se tiene contacto con el mundo a través de una teoría, con lo que
 se tiene contacto es con la teoría, no con el mundo. Si se afirma que
 a través de la teoría se da una existencia independiente del mundo, se
 tiene que poder distinguir, en la propia teoría, què es lo teórico y
-que es el mundo —de lo contrario no serà independiente. Esta
+que es el mundo —de lo contrario no será independiente. Esta
 dificultad, que surge con el dualismo realidad-teoría,
-realidad-lenguaje, desaparecería con la conceptción khuniana de las
+realidad-lenguaje, desaparecería con la concepción khuniana de las
 tradiciones científicas. Los ap priori de la experiencia, de toda
 experiencia posible, son hechos del lenguaje. el sujeto, científico,
-es una encrucijada de discursos, su propia consitencia es el mundo
+es una encrucijada de discursos, su propia consistencia es el mundo
 como mundo de la tradición que les constituye como lenguaje. De esta
 manera, el yo es siempre es mundo y no hay lugar para estos dualismos.
 
@@ -741,21 +741,21 @@ reducir enunciados básicos a la experiencia directa y, en cuanto que
 son enunciados teóricos, es imposible reducirlos a cualquier tipo de
 experiencia singular.\\
 
-Los enujnciados básicos son los únicos que pueden ser falsadores de
+Los enunciados básicos son los únicos que pueden ser falsadores de
 teorías. Su justificación de su aceptación es imposible, sólo queda la
 opción de de aceptarlo o no. Es decir, la aceptación de los enunciados
 básicos recae sobre el científico. Es fácil que la comunidad
 científica se ponga de acuerdo sobre esta decisión. Es una aceptación
 convencional y no definitiva. Esto introduce la posibilidad de una
-regresión infinitia pero que no resulta perjudicical, ya que no se
+regresión infinita pero que no resulta perjudicial, ya que no se
 pretende probar ningún enunciado por medio de la teoría, sino que
 solamente se trata de una posibilidad lógica que siempre se verá
 detenida por lo convenido de los científicos en un momento
 determinado, en el que cadena de contrastaciones se detiene.\\
 
 Así, no es posible responder al problema del conocimiento por medio de
-ninguna teoría científia, i.e., falsable.\\
-La cuestión de que si esta metodologái nos proporciona un conocimiento
+ninguna teoría científica, i.e., falsable.\\
+La cuestión de que si esta metodología nos proporciona un conocimiento
 empírico válido, no solo formalmente sino realmente, es una cuestión
 que sólo puede resolverse mediante la fe metafísica en la
 inmutabilidad de los procesos naturales. El método científico
@@ -768,14 +768,14 @@ que él critica en las teorías convencionalistas. Para salir del
 psicologismo positivista, se acerca primero al convencionalsismo y,
 para superar las sus consecuencias, su salida es un cierto
 pragmatismo. Es decir, trata de corregir su convencionalismo
-insisitiendo en que la contrastación responde a una actitud, decidida,
+insistiendo en que la contrastación responde a una actitud, decidida,
 de falsar, de refutar una teoría.
 
-La actitud refutaroda es lo que diferencia entre al convencionalismo
-de Popper del convencinalismo clássico, y es la moralidad del
+La actitud refutadora es lo que diferencia entre al convencionalismo
+de Popper del convencionalismo clásico, y es la moralidad del
 científico la única base del carácter empírico de los enunciados. Su
 teoría del conocimiento sostiene que la base empírica de todas las
-teorías son los intentos de refutación (tests). És el presupuesto
+teorías son los intentos de refutación (tests). Es el presupuesto
 último del carácter empírico de la ciencia, sólo esta actitud permite
 el desarrollo. Empirismo y desarrollo quedan así conectados
 metodológicamente. La garantía empírica de la ciencia es la actitud
@@ -788,35 +788,35 @@ Para la evolución y desarrollo de la ciencia es necesario:
   1. Su carácter abierto y nunca definitivo
   2. Su carácter progresivo en virtud del cual nuestro conocimiento va
      aumentando y extendiéndose cuantitativamente a cada vez más
-     fenómenos o aspetos de la realidad
+     fenómenos o aspectos de la realidad
 
 La *epistemología* de Popper se caracteriza por el progreso de la
 ciencia para explicar la ciencia actual y tratar de darle una
-explicación que sirva a ese progreso de oritentación y guía. \\
+explicación que sirva a ese progreso de orientación y guía. \\
 El *desarrollo del conocimiento* es un *fenómeno histórico* que
-exiguirá una teoría de la historia de la ciencia, para así poder ser
+exigirá una teoría de la historia de la ciencia, para así poder ser
 explicado y guiado. Pero también un *fenómeno del proceso de
 investigación científica* y exigirá una teoría de la investigación
 científica y una metodología consecuente con dicha teoría.\\
 Los elementos constitutivos necesarios de la epistemología de Popper
 son:
-  1. Una teoría de la historia ed la ciencia. Ésta deberá comprender
+  1. Una teoría de la historia de la ciencia. Ésta deberá comprender
      una teoría de los límites del conocimiento científico y una
      teoría del progreso del conocimiento científico —i.e. una teoría
      del aumento cuantitativo y cualitativo de la ciencia, en la cual
-     irá incluida una explicación de la diferencición histórica de las
+     irá incluida una explicación de la diferenciación histórica de las
      ciencias.
   2. Una teoría de la investigación científica. Deberá comprender una
-     teoría del caracater provisional de nuestro conocimiento, i.e.,
+     teoría del carácter provisional de nuestro conocimiento, i.e.,
      una teoría de las relaciones entre nuestro conocimiento universal
      y nuestra experiencia. Pero también una teoría del aumento de
      nuestro conocimiento, del aprendizaje, del descubrimiento de
      teorías y fenómenos empíricos y de la construcción de leyes y
      teorías.
-  3. Una guia eficaz para promover el desarrollo de la ciencia. Habrá
+  3. Una guía eficaz para promover el desarrollo de la ciencia. Habrá
      de proporcionar directrices para una política científica, i.e.
-     planificacíon de la investigación científica a nivel social,
-     planicificación que habrá de tener en cuenta tanto el carácet
+     planificación de la investigación científica a nivel social,
+     planicificación que habrá de tener en cuenta tanto el carácter
      siempre provisional del conocimiento científico, su fiabilidad,
      como la continua necesidad del aumento cuantitativo y cualitativo
      de la ciencia. Pero también normas para la investigación
@@ -824,9 +824,9 @@ son:
      del antidogmatismo, y normas que posibiliten el descubrimiento
      científico.
 
-*** La idea de un acercamientl a la verdad
+*** La idea de un acercamiento a la verdad
 Pero Popper se limita al nivel de la investigación científica, en la
-que aporta un ametodología en los términos convencionalistas ya
+que aporta una metodología en los términos convencionalistas ya
 expuestos cuya normas para impulsar el desarrollo del conocimiento
 cinetíficos son:
   1. Es preciso inventar teorías cada ves más falsables, i.e., teoría
@@ -852,13 +852,13 @@ Si se entiende el progreso de la ciencia en función de un acercamiento
 a la verdad absoluta, se debe medir esta aproximación y sólo puede ser
 con supuestos a priori: el progreso de la ciencia no dependerá del
 grado de adecuación de nuestro conocimiento a la realidad, sino de la
-cantidad de enuncados básicos, de hehcos, que nuestras teorías
+cantidad de enunciados básicos, de hechos, que nuestras teorías
 permiten inferir.\\
 
 El problema del *aumento del conocimiento* no consiste sólo en que
 cada veza nuestras teorías se refieran a más hechos, sino en que cada
 vez conocemos más y mejor la realidad.\\
-Para eso, Popper acaba asmitiendo el éxito temporal de las teorías
+Para eso, Popper acaba admitiendo el éxito temporal de las teorías
 científicas. Es decir, termina admitiendo, no sólo que el progreso
 consiste en que tenemos teorías cada vez más universales, sino en que
 algunas de estas teorías tienen éxito en sus predicciones, que son
@@ -866,52 +866,52 @@ provisionalmente verificadas.\\
 El falsacionismo no es, pues, en rigor, una teoría del progreso de la
 ciencia, sino una simple metodología antidogmática junto a la cual
 aparece una constatación empírica del progreso científico como aumento
-del éxito de l aciencia en su explicación de la realidad.
+del éxito de la ciencia en su explicación de la realidad.
 
 *** Probabilidad y corroborabilidad
-Para Popper, el aumento del conocimiento ceintífico así como su éxito
+Para Popper, el aumento del conocimiento científico así como su éxito
 tiene que ser un punto de llegada —mientras que para la lógica
-inductivo constituye el centro de la peistemología. La demotración de
+inductivo constituye el centro de la epistemología. La demostración de
 que podemos avanzar en el conocimiento de la realidad con actitudes e
 instrumentos falsadores.\\
 
 Una teoría que se ha tratado de falsar pero que no ha quedado falsada,
 sigue siendo una teoría válida, aunque no se la puede dar por
 verdadera ya que puede resultar falsa en un futuro. Al ser un
-enunciado universal, no puede ser nunca definitivamente varificada,
+enunciado universal, no puede ser nunca definitivamente verificada,
 siempre será una conjetura provisional.\\
 Es preciso cambiar el concepto de verdad por el de probabilidad. Al
-atribuir una probabilidad a un hipótesis etamos haciendo una
+atribuir una probabilidad a un hipótesis estamos haciendo una
 evaluación de la misma que puede ser verdadera o probable. Esto nos
 lleva a un /cul de sac/:
 
 #+begin_quote
 En cuanto a la evolución de las teorías podemos afirmar que es
-verdadera o que es probable. Si se la considrea verdadera tiene que
+verdadera o que es probable. Si se la considera verdadera tiene que
 ser un enunciado sintético verdadero a priori. Si se la toma como
-probable, necestiamos una nueva evaluación, una evaluación de la
+probable, necesitamos una nueva evaluación, una evaluación de la
 evaluación, de orden superior. Entonces estamos atrapados en una
 regresión infinita. La apelación a la probabilidad de la hipótesis es
-incapaz de mejorar la precaria situacio´n de la lógica inductiva.
+incapaz de mejorar la precaria situación de la lógica inductiva.
 #+end_quote
 
 Esta posición tiene relación con la crítica de Popper a la
 epistemología inductiva, pues creer en la lógica de la probabilidad
 supone creer que se llega a la evaluación a través de un principio de
 inducción que adscribe probabilidades a las hipótesis inducidas.\\
-Pero si se vuevle a atribuir una probabilidad a este principio
-estaremos en un regreso al inifinito. Si por el cintrario se le
-atribuye la verdad, nos enfrentamos con el dilema de lelegir entre la
+Pero si se vuelve a atribuir una probabilidad a este principio
+estaremos en un regreso al infinito. Si por el contrario se le
+atribuye la verdad, nos enfrentamos con el dilema de elegir entre la
 regresión infinita y el apriorismo.\\
 Es decir, la lógica inductiva no nos sirve para caracterizar una
 hipótesis cuando ésta ha sido contrastada con la experiencia y ha
-resisitido la prueba. No podemos decir de ella que sea verdadera y ni
-siquiera podemos decir que sea probable. Lo único que podemos deicr es
+resistido la prueba. No podemos decir de ella que sea verdadera y ni
+siquiera podemos decir que sea probable. Lo único que podemos decir es
 que está más o menos corroborada.\\
 
 Que una teoría esté corroborada implica sólo que tal teoría es
 aceptable de manera provisional. No dice nada acerca ni de la verdad
-ni de la proabilidad.\\
+ni de la probabilidad.\\
 Así, decir que una teoría está corroborada cuando es refutable pero
 que no ha sido refutada por los intentos hasta el momento, es decir
 que se ha aceptado una serie de enunciados deducibles de ella y hemos
@@ -922,7 +922,7 @@ En conclusión, el conocimiento necesita, en último término, instancias
 extralógicas —la sinceridad de nuestros intentos por refutar las
 teorías, base del falsacionismo.\\
 El progreso de la ciencia depende de la universalidad creciente de
-nuestras teorías, pero también de la sinceridad de uestros itentos de
+nuestras teorías, pero también de la sinceridad de nuestros tientos de
 refutación.\\
 Sin embargo, estas condiciones sólo garantizan que la ciencia no de
 detenga, no explican que aumente nuestro conocimiento.
@@ -934,8 +934,8 @@ desarrollarse el proceso de aprendizaje y de progreso del conocimiento
 sin involucrarse físicamente en él. El desarrollo de la ciencia se
 produce:
   1. Los científicos inventan y someten a prueba las teorías
-     destinadas a resover problemas que se plantean a partir de
-     toerías existentes.
+     destinadas a resolver problemas que se plantean a partir de
+     teorías existentes.
   2. Entre las teorías se produce una competencia que viene a ser como
      una lucha por la supervivencia. Unas teorías son eliminadas, bien
      porque no sobreviven a una prueba de falsabilidad, bien porque
@@ -948,7 +948,7 @@ Popper tiene varias tesis del mundo 3:
      antes de ser descubiertos y antes de que se hiciesen
      conscientes. Esto es, antes de que en el mundo 2 apareciese algo
      correspondiente a ellos.
-  2. En algún sentido el mundo 3 es autonomo. Podemos hacer en este
+  2. En algún sentido el mundo 3 es autónomo. Podemos hacer en este
      mundo descubrimientos teóricos del mismo modo de que podemos
      hacer descubrimientos geográficos en el mundo 1.
   3. Tesis fundamental: casi todo nuestro conocimiento subjetivo
@@ -958,11 +958,11 @@ Popper tiene varias tesis del mundo 3:
 La plena conciencia de sí mismo depende ed todas estas teorías
 (mundo 3) y de que los animales, aunque sean capaces de tener
 sentimientos, sensaciones, memoria, conciencia, no poseen plena
-concidencia de sí mismos que constituye uno de los resultados del
-lenguaje humano y el desarrollo del mundo 3 esepcíficamente humano.\\
+coincidencia de sí mismos que constituye uno de los resultados del
+lenguaje humano y el desarrollo del mundo 3 específicamente humano.\\
 
 El desarrollo del conocimiento científico, se desarrolla fuera del
-organismo humano. El conocimiento científio es relativamente autónomo
+organismo humano. El conocimiento científico es relativamente autónomo
 respecto de los individuos, no está inscrito en el genoma ni en el
 cerebro. El conocimiento está en los libros y bases de datos
 disponibles para las nuevas generaciones que continuarán desarrollando
@@ -979,9 +979,9 @@ provisional, revisable, superable.\\
 
 Este mismo carácter de provisionalidad afecta al racionalismo crítico
 mismo, que no puede afirmar de manera universalmente obligatoria que
-haya que adoptar una catitud racional de experimentación y de
+haya que adoptar una actitud racional de experimentación y de
 discusión argumental. Optar por la razón no es una cuestión racional,
-sino una decisiónde la que sólo podemos decir que da buenos
+sino una decisión de la que sólo podemos decir que da buenos
 resultados, pero no que sea lógicamente necesaria a priori.\\
 Se trata pues de un racionalismo suspendido en un abismo de
 irracionalidad, ya que en favor de la decisión por la razón no caben
@@ -1004,7 +1004,7 @@ llaman /imagen dominante de la ciencia/ (desde Descartes hasta Popper):
   1. La idea de un método universal y único que sería el propio de la
      ciencia moderna (e.g. el método inductivo).
   2. La idea de un criterio universal de cientificidad que permitiría
-     dsitinguir rigurosamente la ciencia de las pseudociencias o
+     distinguir rigurosamente la ciencia de las pseudociencias o
      teorías no científicas (e.g. criterio de falsabilidad)
   3. La idea de un progreso lineal, continuo y acumulativo de la
      ciencia, un progreso en línea recta sin rupturas,
@@ -1032,7 +1032,7 @@ de constitución de la razón.
 
 *** El concepto de paradigma
 Un paradigma es un ideal común de explicación, un conjunto de formas
-simbólicas, un moelo teórico y una serie de métodos para la solución
+simbólicas, un modelo teórico y una serie de métodos para la solución
 de problemas empleados en la formación de los investigadores. Es el
 marco en cuyo interior se desarrolla la actividad científica en un
 momento dado. Constituye una especie de matriz común gracias a la cual
@@ -1042,19 +1042,19 @@ comunidad científica:
 
 *** Ciencia normal y revolución científica
 La actividad científica se desarrolla en el marco de un paradigma
-vigente que es el que define ciencia norma en unmomento dado. En la
+vigente que es el que define ciencia norma en un momento dado. En la
 evolución histórica de la ciencia se distinguen períodos de ciencia
-normal, marcados por la aceptación general de un aparadigma, y
+normal, marcados por la aceptación general de un paradigma, y
 períodos de ciencia normal, marcados por la aceptación general de un
 paradigma, y períodos de revolución, en los que hay varios paradigmas
 en competición. La elección de uno o de otro no depende de criterios
 lógicos o metodológicos, sino del conjunto de valores del grupo social
-al que el científio pertenece.\\
+al que el científico pertenece.\\
 
 El ejercicio de la ciencia normal consiste en aplicar el paradigma
 dentro del que se trabaja y resolver los problemas que se presentan
 sin cuestionar el paradigma mismo. Cuando surgen experiencias u
-observaciones que cuestionan el mismo paradigmo, se suele pensar que
+observaciones que cuestionan el mismo paradigma, se suele pensar que
 es un error de cálculo o de experimentación. Este sería un punto que
 se opone a la noción de Popper de falsación.\\
 Según Kuhn, para ser un buen científico se tiene que tener bien
@@ -1063,12 +1063,12 @@ no sería una característica de la investigación científica normal.\\
 Sólo cuando los contraejemplos no buscados aumenten y resulten cada
 vez más difíciles de ignorar se empieza a producir un cuestionamiento
 del paradigma pudiéndose iniciar un período de revolución.(E.g.,
-revolución copernicana, con el macanicismo que culmina con
+revolución copernicana, con el mecanicismo que culmina con
 Newton. Otro ejemplo el paso de la física Newtoniana al relativismo ed
 Einstein.)\\
 
-Puesto que los paradigmas son incomensurables, lo componentes del
-paradigma antiguo ejan simplemente de existir en el nuevo. Esto
+Puesto que los paradigmas son inconmensurables, los componentes del
+paradigma antiguo dejan simplemente de existir en el nuevo. Esto
 significa que diferentes paradigmas implica necesariamente fenómenos
 distintos, aunque se pueda compartir terminología (el nombre no hace
 la cosa, planeta, estrella, gen etc.). Así, no hay continuidad ni
@@ -1076,17 +1076,133 @@ profundización en el desarrollo del saber.
 
 
 *** La crítica al modelo fundacionista de la ciencia
-La metodología de validadciónn de los neopositivistas son sólo válidos
+La metodología de validación de los neopositivistas son sólo válidos
 en un período de ciencia normal, que se ejerce en un paradigma
-dado. En los períodods de revolución en el que copiten varios
+dado. En los períodos de revolución en el que compiten varios
 paradigmas, no hay estructuras lógicas o metodológicas para el
 asentimiento a uno u otro paradigma. La elección depende sobretodo de
 los sistemas de valores presentes en los entornos a los que los
-científicos ejercen. El paso de un pradigma a otro no se explica desde
+científicos ejercen. El paso de un paradigma a otro no se explica desde
 un punto de vista lógico, no hay secuencias de modificaciones
 regulares, explicables, cada una en función de la precedente, sino
 cambios súbitos y masivos tras los cuales sobrevive un nuevo período
-de ciencia normal durante el que los criterios de logicidad estan de
-nuevo en vigor hasta otra nueva revlución.\\
+de ciencia normal durante el que los criterios de logicidad están de
+nuevo en vigor hasta otra nueva revolución.\\
+La adopción de un nuevo paradigma también equivale a una
+reestructuración de las implicaciones sociales, y no puede
+comprenderse sin referencia a una diversidad de factores psicológicos
+y sociales tanto como lógicos.\\
+
+Cualquier conjunto de fenómenos es susceptible de ser
+explicado-interpretado de maneras diversas, a partir de diversas
+teorías o paradigmas, y todas convincentes. Esta diversidad de
+explicaciones plausibles depende de lo que se pretenda con la teoría o
+de lo que se espere de ella, predecir exactamente acontecimientos,
+dominar técnicamente la naturaleza o gozar de una concepción
+psicológica adecuada. Esto implica que no tiene sentido hablar de un
+metalenguaje universal o de una metateoría neutra para decidir de
+manera racional entre diversas teorías i diversos paradigmas. Tampoco
+hay un acceso a la realidad que haga válida la concepción de la verdad
+como adecuación entre teoría y realidad. Toda realidad está
+mediatizada por una interpretación que es de naturaleza lingüística. Y
+al no haber ni referencia exterior, ni criterio absoluto como la
+razón, que permita comparar y juzgar los paradigmas, no se puede decir
+que el paso de un paradigma a otro constituya un progreso en el
+desarrollo del conocimiento.
+
+** Feyerabend: hacia una teoría anarquista del conocimiento
+
+*** Contra el método
+Feyerabend se enfrenta directamente a la reducción dela explicación
+científica a la predicción, según el esquema neopositivista. El nuevo
+modelo de explicación deductivista del neopositivismo se presentaba
+como uno de los mejores resultados dela metodología positivista. Lo que
+Feyerabend discute es el presupuesto de base según el cual teorías que
+compiten entre sí pueden siempre compararse formalmente de tal manera
+que se pueda llegar a aceptar una y rechazar otras. En este sentido,
+siguiendo a Popper, en la idea de que es deseable que ninguna teoría,
+ninguna ciencia normal según Kuhn, queda tomar posesión de un dominio
+científico determinado. Muchas posibilidades deben ser mantenidas al
+mismo tiempo, de tal forma que toda posibilidad de apertura sea
+ensayada, y toda configuración puesta a prueba.\\
+
+La puesta a prueba no consiste en comparar una teoría con una
+experiencia, sino en ver como se comportan varias teorías que son
+mutuamente incompatibles, sin que ninguna pueda dar cuenta por sí sola
+de todos los hechos.\\
+Para Feyerabend, una teoría es una manera de ver el mundo, no una
+forma de poner en orden un conjunto de datos. Puesto que las teorías
+que defendemos tienen una influencia sobre nuestras creencias y
+nuestras esperanzas, tienden a modelar nuestra experiencia. No hay un
+conjunto neutro de hechos o de relaciones de observación que una
+teoría u otra puedan explicar. Los logicistas han creído siempre que
+todo lo que se debe averiguar para explicar la naturaleza de la
+confirmación científica es el tipo de teoría que mejor explica
+determinado conjunto de hechos o datos. Pero si el conjunto de hechos
+en cuestión no está dado, sino que depende del contexto teórico en el
+interior del cual ha sido formulado. Las teorías en competición son
+inconmensurables, que no hay medio de compararlas directamente y
+lógicamente las unas con las otras.\\
+
+Por tanto, la exigencia de que una teoría deba estar de acuerdo con
+las que eran anteriormente válidas en su mismo dominio,no podría
+cumplirse por esta misma razón. La búsqueda de una lógica inductiva
+susceptible de llevar a generalizaciones cada vez mayores, está
+destinada a fracasar.\\
+Para Feyerabend hay que descartar el hecho de que las teorías pueden
+ser establecidas por la experiencia. Así que no hay otros medios que
+los psicológicos para establecer el acuerdo.\\
+Un ejemplo de esto es la defensa galileana de la teoría
+copernicana. Galileo no estableció el nuevo sistema, como la teoría
+positivista nos la haría creer. El sistema copernicano estaba ya en
+desacuerdo con los hechos desde muchos puntos de vista. Galileo debió
+recurrir a determinadas estrategias psicólogas para que se aceptase la
+teoría: su arte de persuadir, su habilidad retórica, etc. De modo que
+esa idea de un método científico, como tal, no es más que un
+mito. Recurrir a ella es creer tener un acceso privilegiado a la
+verdad de manera objetiva. Contra ello, Feyerabend proclama que no hay
+método.
+
+*** Ciencia y política
+Feyerabend destaca el papel de la argumentación, de la persuasión,
+dela retórica y de la propaganda en el triunfo de una teoría
+científica. La vigencia y aceptación de una teoría científica no se
+debe a sea más verdadera o más objetiva, por lo que la autoridad del
+científico no se legitima en virtud de una referencia neutra a la
+realidad. Será un poder de naturaleza política. Hacer ciencia también
+es hacer política, aunque de una manera discreta, incluso
+inconsciente, pues siempre se trata de conquistar el poder.\\
+Algunas observaciones:
+  1. No se pude negar que la política interviene también en la
+     investigación y el desarrollo científico. La política es la que
+     decide qué sectores promover, el destino de las subvenciones a
+     tal o cual programa de investigación. Los científicos, si quieren
+     llevar a buen término sus investigaciones, están obligados a
+     tener muy en cuenta al poder. No obstante, debe subrayarse que la
+     politización procede de fuera de la investigación
+     científica. Puede orientarla, estimularla, frenarla, pero no
+     puede sustituirla. Un debate científico no se produce de la misma
+     manera que un debate político. En el debate político se vence a
+     un oponente y se impone el propio programa político. El poder
+     político es resultado de la dominación de la voluntad de un
+     individuo sobre los otros. Por otro lado, un verdadero debate
+     científico se zanja mediante la experiencia, la resistencia o no
+     de la realidad, que confirma o desconfirma una predicción y que
+     se deja o no manipular técnicamente con vistas a la realización
+     de una predicción y que se deja o no manipular técnicamente con
+     vistas a la realización de un objetivo.
+  2. No se puede hacer del científico un creyente que se limita a
+     aplicar las recetas de la investigación en los períodos de
+     ciencia normal y que cambia por motivaciones en las que tienen un
+     papel determinante el azar, el contexto histórico, los intereses
+     personales y corporativos, las circunstancias sociales, la fuerza
+     retórica y la propaganda. No hay progreso interno al desarrollo
+     científico no progreso en relación con las concepciones
+     precientíficas (mitos, metafísica, religiones). La ciencia es
+     pues, una manera de relacionarse con el mundo que no admite
+     privilegio de ninguna clase. Esto está en la línea de la
+     filosofía del lenguaje de Wittgenstein. Con Kuhn y Feyerabend,
+     pretenden extraer su concepción de la ciencia del análisis
+     objetivo de la historia misma de las ciencias.
 
 
